--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.49.3",
     "@tabler/icons-react": "^3.31.0",
+    "@types/react-datepicker": "^6.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
@@ -28,6 +29,7 @@
     "motion": "^12.6.2",
     "next": "15.2.4",
     "react": "^19.0.0",
+    "react-datepicker": "^8.2.1",
     "react-day-picker": "^9.6.3",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
